--- a/.cvsignore
+++ b/.cvsignore
@@ -18,11 +18,11 @@ intl
 config.h.in
 stamp-h.in
 ABOUT-NLS
-sodipodi.spec
-sodipodi.1
+inkscape.spec
+inkscape.1
 *.svg
 intltool-*
-sodipodi.desktop
+inkscape.desktop
 GNOME_Sodipodi.oaf
 autom4te-2.5x.cache
 toru
