disabled build of spsvgview for the time being
(bzr r101)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -160,7 +160,7 @@ inkscape_LDADD = \
 
 inkscape_LDFLAGS = -Wl,--export-dynamic $(kdeldflags)
 
-noinst_PROGRAMS = spsvgview
+EXTRA_PROGRAMS = spsvgview
 
 spsvgview_SOURCES = \
 	spsvgview.c \
