Patches to make compile on OSX/Darwin. malloc.h replace with unistd.h and Wl in src/Makefile.am removed at --export-dynamic
(bzr r152)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -159,7 +159,7 @@ inkscape_LDADD = \
 	$(FREETYPE_LIBS) \
 	$(kdeldadd)
 
-inkscape_LDFLAGS = -Wl,--export-dynamic $(kdeldflags)
+inkscape_LDFLAGS = --export-dynamic $(kdeldflags)
 
 EXTRA_PROGRAMS = spsvgview
 
