--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,13 @@ EXTRA_DIST = \
 	inkscape.spec		\
 	README HACKING		\
 	inkscape.png \
-	inkscape.ico inkscape16.ico inkscape32.ico inkscape64.ico
+	inkscape.ico inkscape16.ico inkscape32.ico inkscape64.ico \
+	debian/changelog \
+	debian/copyright \ 
+	debian/control \
+	debian/rules \
+	debian/inkscape.menu
+
 
 DISTCLEANFILES = inkscape.desktop \
                  intltool-extract \
