Committing lots of modules changes.  This make it so that it can read modules from directories and also can build those into menus.  It also documents most of the code in the Doxygen format.
(bzr r210)

--- a/extensions/Makefile.am
+++ b/extensions/Makefile.am
@@ -3,14 +3,25 @@ extensiondir = $(libdir)/inkscape/extensions
 
 otherstuffdir = $(datadir)/inkscape/extensions
 
+moduledir = $(datadir)/inkscape/modules
+
 extensions = \
 	roundhole \
 	ill2svg.pl \
 	SpSVG.pm \
-	svg_dropshadow
+	svg_dropshadow \
+	dia2svg.sh
 
 otherstuff = \
 	roundhole.xpm
+
+modules = \
+	svgz_input.inkmod \
+	svgz_output.inkmod \
+	ai_input.inkmod \
+	roundhole.inkmod \
+	dropshadow.inkmod \
+	dia.inkmod
 
 extension_SCRIPTS = \
 	$(extensions)
@@ -18,5 +29,8 @@ extension_SCRIPTS = \
 otherstuff_DATA = \
 	$(otherstuff)
 
-EXTRA_DIST = $(extension_SCRIPTS) $(otherstuff_DATA)
+module_DATA = \
+	$(modules)
+
+EXTRA_DIST = $(extension_SCRIPTS) $(otherstuff_DATA) $(module_DATA)
 
