--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -5,30 +5,38 @@ endif
 
 extdir = $(libdir)/inkscape/extensions
 extdatadir = $(datadir)/inkscape/extensions
+moduledir = $(datadir)/inkscape/modules
 
 INCLUDES = \
 	-I.. \
 	-I$(top_srcdir)/src \
 	-DINKSCAPE_EXTENSIONDIR=\""$(extdir)"\" \
 	-DINKSCAPE_EXTENSIONDATADIR=\""$(extdatadir)"\" \
+	-DINKSCAPE_MODULESDIR=\""$(moduledir)"\" \
 	$(INKSCAPE_CFLAGS) \
 	$(GNOME_PRINT_CFLAGS)
 
 noinst_LIBRARIES = libspmodules.a
 
 libspmodules_a_SOURCES = \
-	sp-module.c \
-	sp-module-doc.c \
-	sp-module-doc.h \
-	sp-module-exec.c \
-	sp-module-exec-ext.c \
-	sp-module-exec-ext.h \
-	sp-module-exec.h \
-	sp-module.h \
-	sp-module-sys.c \
-	sp-module-sys.h \
-	ps.c ps.h \
-	$(gnome_print_sources)
+		init.c \
+		init.h \
+		menu.c \
+		menu.h \
+		db.c \
+		db.h \
+		system.c \
+		system.h \
+\
+		extension.c \
+		extension.h \
+\
+		svg.c \
+		svg.h \
+\
+		ps.c ps.h \
+		$(kdeprivsources) \
+		$(gnome_print_sources)
 
 EXTRA_DIST = \
 	$(gnome_print_sources) \
