namespaces cleanup and initial layers support
(bzr r213)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -62,6 +62,7 @@ inkscapelib_src = \
 	document.c document.h document-private.h \
 	document-undo.c \
 	uri-references.c uri-references.h \
+	version.c version.h \
 	extension.h
 
 noinst_LTLIBRARIES = libinkscape.la
