--- a/configure.in
+++ b/configure.in
@@ -180,6 +180,38 @@ AC_CHECK_FUNCS(gtk_window_set_default_icon_from_file)
 LIBS=$sp_save_LIBS
 
 
+
+dnl ******************************
+dnl   Reported by autoscan
+dnl ******************************
+AC_CHECK_FUNCS(floor)
+AC_CHECK_FUNCS(gettimeofday)
+AC_CHECK_FUNCS(memmove)
+AC_CHECK_FUNCS(memset)
+AC_CHECK_FUNCS(mkdir)
+AC_CHECK_FUNCS(pow)
+AC_CHECK_FUNCS(sqrt)
+AC_CHECK_FUNCS(strncasecmp)
+AC_CHECK_FUNCS(strpbrk)
+AC_CHECK_FUNCS(strrchr)
+AC_CHECK_FUNCS(strspn)
+AC_CHECK_FUNCS(strstr)
+AC_CHECK_FUNCS(strtoul)
+AC_CHECK_HEADERS(fcntl.h)
+AC_CHECK_HEADERS(libintl.h)
+AC_CHECK_HEADERS(stddef.h)
+AC_CHECK_HEADERS(sys/time.h)
+AC_FUNC_MALLOC
+AC_FUNC_STAT
+AC_FUNC_STRFTIME
+AC_FUNC_STRTOD
+AC_HEADER_STAT
+AC_HEADER_TIME
+AC_STRUCT_TM
+AC_TYPE_MODE_T
+AC_TYPE_SIGNAL
+
+
 dnl ******************************
 dnl   Plugin Support
 dnl ******************************
@@ -294,6 +326,17 @@ glade/Makefile
 inkscape.spec
 inkscape.1
 ])
+
+AH_TOP([
+#ifdef __cplusplus
+#define INK_STATIC_CAST( type, ptr ) static_cast< type >(ptr)
+#define INK_CONST_CAST( type, ptr ) const_cast< type >(ptr)
+#else
+#define INK_STATIC_CAST( type, ptr ) ((type)(ptr))
+#define INK_CONST_CAST( type, ptr ) ((type)(ptr))
+#endif
+])
+
 AC_OUTPUT
 
 echo "
