Patch #842958: updating inkscape.desktop.in file
(bzr r242)

--- a/inkscape.desktop.in
+++ b/inkscape.desktop.in
@@ -6,7 +6,8 @@ Encoding=UTF-8
 Version=1.0
 
 Type=Application
-Categories=Application;Graphics
+Categories=Application;Graphics;VectorGraphics;GTK;
+
 MimeType=image/svg+xml
 
 FilePattern=inkscape
