Fixing a couple of bugs of things that didn't make it in the build environment from files changing.  Nothing major - just typos really.
(bzr r455)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-sodipodi.desktop.in
+inkscape.desktop.in
 src/bonobo/svg-doc-factory.c
 src/desktop.c
 src/dialogs/align.c
