Change .c filenames to .cpp.
(bzr r630)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,55 +1,55 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 inkscape.desktop.in
-src/bonobo/svg-doc-factory.c
-src/desktop.c
-src/dialogs/align.c
-src/dialogs/desktop-properties.c
-src/dialogs/display-settings.c
-src/dialogs/document-properties.c
-src/dialogs/export.c
-src/dialogs/fill-style.c
-src/dialogs/item-properties.c
-src/dialogs/object-attributes.c
-src/dialogs/object-properties.c
-src/dialogs/stroke-style.c
-src/dialogs/text-edit.c
-src/dialogs/tool-attributes.c
-src/dialogs/tool-options.c
-src/dialogs/transformation.c
-src/dialogs/xml-tree.c
-src/document.c
-src/draw-context.c
-src/dyna-draw-context.c
-src/event-context.c
-src/file.c
-src/help.c
-src/helper/unit-menu.c
-src/helper/units.c
-src/interface.c
-src/main.c
-src/module.c
-src/modules/gnome.c
-src/modules/ps.c
-src/object-ui.c
-src/print.c
-src/rect-context.c
-src/select-context.c
-src/slideshow.c
-src/inkscape.c
-src/sp-anchor.c
-src/sp-image.c
-src/sp-item-group.c
-src/sp-item.c
-src/sp-text.c
-src/spiral-context.c
-src/star-context.c
-src/toolbox.c
-src/verbs.c
-src/widgets/font-selector.c
-src/widgets/gradient-selector.c
-src/widgets/gradient-vector.c
-src/widgets/paint-selector.c
-src/widgets/sp-color-selector.c
-src/widgets/sp-toolbox.c
-src/widgets/sp-xmlview-attr-list.c
+src/bonobo/svg-doc-factory.cpp
+src/desktop.cpp
+src/dialogs/align.cpp
+src/dialogs/desktop-properties.cpp
+src/dialogs/display-settings.cpp
+src/dialogs/document-properties.cpp
+src/dialogs/export.cpp
+src/dialogs/fill-style.cpp
+src/dialogs/item-properties.cpp
+src/dialogs/object-attributes.cpp
+src/dialogs/object-properties.cpp
+src/dialogs/stroke-style.cpp
+src/dialogs/text-edit.cpp
+src/dialogs/tool-attributes.cpp
+src/dialogs/tool-options.cpp
+src/dialogs/transformation.cpp
+src/dialogs/xml-tree.cpp
+src/document.cpp
+src/draw-context.cpp
+src/dyna-draw-context.cpp
+src/event-context.cpp
+src/file.cpp
+src/help.cpp
+src/helper/unit-menu.cpp
+src/helper/units.cpp
+src/interface.cpp
+src/main.cpp
+src/module.cpp
+src/modules/gnome.cpp
+src/modules/ps.cpp
+src/object-ui.cpp
+src/print.cpp
+src/rect-context.cpp
+src/select-context.cpp
+src/slideshow.cpp
+src/inkscape.cpp
+src/sp-anchor.cpp
+src/sp-image.cpp
+src/sp-item-group.cpp
+src/sp-item.cpp
+src/sp-text.cpp
+src/spiral-context.cpp
+src/star-context.cpp
+src/toolbox.cpp
+src/verbs.cpp
+src/widgets/font-selector.cpp
+src/widgets/gradient-selector.cpp
+src/widgets/gradient-vector.cpp
+src/widgets/paint-selector.cpp
+src/widgets/sp-color-selector.cpp
+src/widgets/sp-toolbox.cpp
+src/widgets/sp-xmlview-attr-list.cpp
