Add some header files to SOURCES, so that `make distcheck' works.
(bzr r632)

--- a/src/livarot/Makefile.am
+++ b/src/livarot/Makefile.am
@@ -8,15 +8,18 @@ INCLUDES = \
 libvarot_a_SOURCES = \
 	AVL.cpp AVL.h \
 	DblLinked.cpp DblLinked.h \
+	LivarotDefs.h	\
+	MyMath.h	\
 	Path.cpp Path.h \
 	PathConversion.cpp Path.h \
 	PathOutline.cpp Path.h \
 	PathStroke.cpp Path.h \
 	PathSimplify.cpp Path.h \
+	ShapeUtils.h	\
 	Shape.cpp Shape.h \
 	ShapeMisc.cpp Shape.h \
 	ShapeDraw.cpp Shape.h \
 	ShapeSweep.cpp Shape.h \
 	ShapeSweepUtils.cpp Shape.h \
 	MySeg.cpp MySeg.h
-	
+
