--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -1,34 +1,50 @@
 
-VERSION = 0.37cvs
-
 CC = gcc
 CXX = g++
 
 GTK = c:\gtk
 
-GTKINC = -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include \
--I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include \
--I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include 
+#GTKINC = -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include \
+#-I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include \
+#-I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include 
 
-GTKLIBS = -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 \
- -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0
+#GTKLIBS = -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 \
+# -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0
 
+GTK=c:/gtk
 
-INC = -I. -I.. -I../.. $(GTKINC) -I/usr/include/libart-2.0 -I/usr/include/libxml2
+GTKINC = -I$(GTK)/include/gtk-2.0 -I$(GTK)/lib/gtk-2.0/include \
+-I$(GTK)/include/atk-1.0 -I$(GTK)/include/pango-1.0 \
+-I$(GTK)/include/glib-2.0 -I$(GTK)/lib/glib-2.0/include
 
-LIBS = $(GTKLIBS) -lxml2 -lart_lgpl_2 -lpng -lpopt
+GTKLIB = -L$(GTK)/lib -lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 \
+-lgdk_pixbuf-2.0 -lm -lpangoft2-1.0 -lpangowin32-1.0 -lpango-1.0 \
+-lgobject-2.0 -lgmodule-2.0 -lglib-2.0
+
+INC = -I. -I.. -I../.. $(GTKINC) -I$(GTK)/include \
+-I$(GTK)/include/libart-2.0 -I$(GTK)/include/libxml2 \
+-I$(GTK)/include/freetype2
+
+LIBS = $(GTKLIB) -lxml2 -lart_lgpl_2 \
+-lfreetype -lpng -mwindows -lws2_32 -lz -liconv
 
  
-VARS = \
--DINKSCAPE_VERSION=\""$(VERSION)"\" \
--DPACKAGE_LOCALE_DIR=\""locale"\" \
--DDATADIR=\""data"\" \
--DINKSCAPE_PIXMAPDIR=\""pixmaps"\" \
--DINKSCAPE_EXTENSIONDIR=\""extensions"\" \
--DINKSCAPE_MODULESDIR=\""modules"\" \
--DINKSCAPE_GLADEDIR=\""pixmaps"\"
+#VARS = \
+#-DINKSCAPE_VERSION=\""$(VERSION)"\" \
+#-DPACKAGE_LOCALE_DIR=\""locale"\" \
+#-DDATADIR=\"data\" \
+#-DINKSCAPE_PIXMAPDIR=\""pixmaps"\" \
+#-DINKSCAPE_EXTENSIONDIR=\""extensions"\" \
+#-DINKSCAPE_MODULESDIR=\""modules"\" \
+#-DINKSCAPE_GLADEDIR=\""pixmaps"\"
 
-CFLAGS = -O3 -g -Wall $(VARS)
+CFLAGS = -O3  -Wall -mms-bitfields
+
+.cpp.o:
+	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
+
+.c.o:
+	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
 
 
 
