--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -13,7 +13,30 @@ dist:
 	deltree /y inkscape
 	mkdir inkscape
 	copy src\inkscape.exe inkscape
-	copy $(GTK)\bin\*.dll inkscape
+	copy $(GTKDOS)\bin\freetype-6.dll inkscape
+	copy $(GTKDOS)\bin\iconv.dll inkscape
+	copy $(GTKDOS)\bin\intl.dll inkscape
+	copy $(GTKDOS)\bin\libart_lgpl_2-2.dll inkscape
+	copy $(GTKDOS)\bin\libatk-1.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libgdk-win32-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libgdk_pixbuf-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libglib-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libgmodule-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libgobject-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libgtk-win32-2.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libiconv-2.dll inkscape
+	copy $(GTKDOS)\bin\libpango-1.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libpangowin32-1.0-0.dll inkscape
+	copy $(GTKDOS)\bin\libpng12.dll inkscape
+	copy $(GTKDOS)\bin\msvcr70.dll inkscape
+	copy $(GTKDOS)\bin\zlib-1.dll inkscape
+	copy $(GTKDOS)\bin\zlib.dll inkscape
+	xcopy /e /i $(GTKDOS)\etc inkscape\etc
+	mkdir inkscape\lib
+	xcopy /e /i $(GTKDOS)\lib\gtk-2.0 inkscape\lib\gtk-2.0
+	xcopy /e /i $(GTKDOS)\lib\glib-2.0 inkscape\lib\glib-2.0
+	xcopy /e /i $(GTKDOS)\lib\locale inkscape\lib\locale
+	xcopy /e /i $(GTKDOS)\lib\pango inkscape\lib\pango
 	mkdir inkscape\pixmaps
 	copy glade\*.xpm inkscape\pixmaps
 	copy glade\*.png inkscape\pixmaps
@@ -25,10 +48,10 @@ dist:
 	mkdir inkscape\samples
 	copy samples\*.svg inkscape\samples
 	copy samples\*.png inkscape\samples
-	jar cMf inkscape-$(VERSION).zip inkscape
 
 clean:
 	$(RM) -rf inkscape
+	$(RM) -rf inkscape*.zip
 	$(MAKE) -C src -f Makefile.mingw clean
 
 
