--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -4,31 +4,37 @@ VERSION=0.37cvs
 CC = gcc
 CXX = g++
 
-#GTKINC = -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include \
-#-I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include \
-#-I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include 
-
-#GTKLIBS = -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 \
-# -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0
-
 GTK=c:/gtk
 #Same thing, DOS style
 GTKDOS=c:\gtk
 
-GTKINC = -I$(GTK)/include/gtk-2.0 -I$(GTK)/lib/gtk-2.0/include \
+GTKINC = -I$(GTK)/include/gtkmm-2.0 -I$(GTK)/lib/gtkmm-2.0/include \
+-I$(GTK)/include/sigc++-1.2 -I$(GTK)/lib/sigc++-1.2/include \
+-I$(GTK)/include/gtk-2.0 -I$(GTK)/lib/gtk-2.0/include \
 -I$(GTK)/include/atk-1.0 -I$(GTK)/include/pango-1.0 \
 -I$(GTK)/include/glib-2.0 -I$(GTK)/lib/glib-2.0/include
 
-GTKLIB = -L$(GTK)/lib -lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 \
+# DYNAMIC LINKING
+GTKLIB = -L$(GTK)/lib \
+-lgtkmm-2.0.dll -lgdkmm-2.0.dll -lglibmm-2.0.dll \
+-lpangomm-1.0.dll -latkmm-1.0.dll \
+-lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 \
 -lgdk_pixbuf-2.0 -lm -lpangoft2-1.0 -lpangowin32-1.0 -lpango-1.0 \
 -lgobject-2.0 -lgmodule-2.0 -lglib-2.0
+
+#GTKLIB = --static \
+#-L$(GTK)/lib $(GTK)/lib/gtk-win32-2.0.lib $(GTK)/lib/gdk-win32-2.0.lib \
+#$(GTK)/lib/atk-1.0.lib $(GTK)/lib/gdk_pixbuf-2.0.lib \
+#$(GTK)/lib/pangoft2-1.0.lib $(GTK)/lib/pangowin32-1.0.lib $(GTK)/lib/pango-1.0.lib \
+#$(GTK)/lib/gobject-2.0.lib $(GTK)/lib/gmodule-2.0.lib $(GTK)/lib/glib-2.0.lib \
+#-lm
 
 INC = -I. -I.. -I../.. $(GTKINC) -I$(GTK)/include \
 -I$(GTK)/include/libart-2.0 -I$(GTK)/include/libxml2 \
 -I$(GTK)/include/freetype2
 
-LIBS = $(GTKLIB) -lxml2 -lart_lgpl_2 \
--lfreetype -lpng -mwindows -lws2_32 -lz -liconv
+LIBS = $(GTKLIB) -lxml2 $(GTK)/lib/art_lgpl_2.lib $(GTK)/lib/iconv.lib \
+-lfreetype -lpng $(GTK)/lib/libz.lib -mwindows -lws2_32
 
  
 #VARS = \
