--- a/src/libnr/Makefile.mingw
+++ b/src/libnr/Makefile.mingw
@@ -9,7 +9,7 @@ include ../../Makefile.mingw.common
 
 
 OBJ = \
-gen_nr_config.o have_mmx.o nr-blit.o nr-compose.o \
+have_mmx.o nr-blit.o nr-compose.o \
 nr-compose-transform.o nr-gradient.o nr-matrix.o \
 nr_mmx_R8G8B8A8_P_EMPTY_A8_RGBAP.o \
 nr_mmx_R8G8B8A8_P_R8G8B8A8_P_A8_RGBAP.o \
@@ -19,10 +19,7 @@ nr-pixblock-line.o nr-pixblock.o nr-pixblock-pattern.o \
 nr-pixblock-pixel.o nr-rect.o nr-stroke.o nr-svp.o nr-svp-render.o \
 nr-svp-uncross.o nr-uta.o nr-values.o testnr.o
 
-all: nr_config.h $(OBJ)
-
-nr_config.h: nr_config.h.mingw
-	copy nr_config.h.mingw nr_config.h
+all: $(OBJ)
 
 clean:
 	$(RM) *.o
