--- a/configure.in
+++ b/configure.in
@@ -57,10 +57,10 @@ FREETYPE_LIBS=`$FREETYPE_CONFIG --libs`
 AC_SUBST(FREETYPE_CFLAGS)
 AC_SUBST(FREETYPE_LIBS)
 
-dnl Gtkmm check
-PKG_CHECK_MODULES(GTKMM, gtkmm-2.0)
-CXXFLAGS="$CXXFLAGS $GTKMM_CFLAGS"
-LIBS="$LIBS $GTKMM_LIBS"
+dnl Gtkmm check (disabled until we resolve the packaging issue)
+dnl PKG_CHECK_MODULES(GTKMM, gtkmm-2.0)
+dnl CXXFLAGS="$CXXFLAGS $GTKMM_CFLAGS"
+dnl LIBS="$LIBS $GTKMM_LIBS"
 
 dnl ******************************
 dnl Popt checking
