Changes to NR::Point.
(bzr r826)

--- a/src/libnr/Makefile.am
+++ b/src/libnr/Makefile.am
@@ -8,6 +8,12 @@ INCLUDES = \
 	$(cflags) \
 	$(INKSCAPE_CFLAGS)
 
+TESTS = nr-types-test$(EXEEXT)
+# automake adds $(EXEEXT) to check_PROGRAMS items but not to TESTS items:
+# TESTS items can be scripts etc.
+
+check_PROGRAMS = nr-types-test
+
 if USE_MMX
 mmx_sources = \
 	have_mmx.S \
@@ -22,10 +28,11 @@ BUILT_SOURCES =
 DISTCLEANFILES =
 
 libnr_a_SOURCES = \
-	nr-types.h \
+	nr-types.cpp nr-types.h	\
 	nr-forward.h \
 	nr-macros.h \
-	nr-values.cpp nr-values.h \
+	nr-values.cpp nr-values.h	\
+	nr-point-fns.cpp nr-point-fns.h \
 	nr-matrix.cpp nr-matrix.h \
 	nr-rect.cpp nr-rect.h \
 	nr-pixops.h \
@@ -50,6 +57,9 @@ libnr_a_SOURCES = \
 testnr_SOURCES = \
 	testnr.cpp
 
-testnr_LDADD = \
-	libnr.a \
+testnr_LDADD =	\
+	libnr.a	\
 	-lglib-2.0
+
+nr_types_test_SOURCES = nr-types-test.cpp nr-types.cpp nr-point-fns.cpp
+#nr_types_test_LDADD = libnr.a
