--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -2,6 +2,7 @@
 CC = gcc
 CXX = g++
 
+###### DYNAMIC LINKING
 GTK=c:/gtk
 #Same thing, DOS style
 GTKDOS=c:\gtk
@@ -12,20 +13,12 @@ GTKINC = -I$(GTK)/include/gtkmm-2.0 -I$(GTK)/lib/gtkmm-2.0/include \
 -I$(GTK)/include/atk-1.0 -I$(GTK)/include/pango-1.0 \
 -I$(GTK)/include/glib-2.0 -I$(GTK)/lib/glib-2.0/include
 
-# DYNAMIC LINKING
 GTKLIB = -L$(GTK)/lib \
 -lgtkmm-2.0.dll -lgdkmm-2.0.dll -lglibmm-2.0.dll \
--lpangomm-1.0.dll -latkmm-1.0.dll \
+-lpangomm-1.0.dll -latkmm-1.0.dll -lsigc-1.2.dll\
 -lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 \
 -lgdk_pixbuf-2.0 -lm -lpangoft2-1.0 -lpangowin32-1.0 -lpango-1.0 \
 -lgobject-2.0 -lgmodule-2.0 -lglib-2.0
-
-#GTKLIB = --static \
-#-L$(GTK)/lib $(GTK)/lib/gtk-win32-2.0.lib $(GTK)/lib/gdk-win32-2.0.lib \
-#$(GTK)/lib/atk-1.0.lib $(GTK)/lib/gdk_pixbuf-2.0.lib \
-#$(GTK)/lib/pangoft2-1.0.lib $(GTK)/lib/pangowin32-1.0.lib $(GTK)/lib/pango-1.0.lib \
-#$(GTK)/lib/gobject-2.0.lib $(GTK)/lib/gmodule-2.0.lib $(GTK)/lib/glib-2.0.lib \
-#-lm
 
 INC = -I. -I.. -I../.. $(GTKINC) -I$(GTK)/include \
 -I$(GTK)/include/libart-2.0 -I$(GTK)/include/libxml2 \
@@ -33,6 +26,35 @@ INC = -I. -I.. -I../.. $(GTKINC) -I$(GTK)/include \
 
 LIBS = $(GTKLIB) -lxml2 $(GTK)/lib/art_lgpl_2.lib $(GTK)/lib/iconv.lib \
 -lfreetype -lpng $(GTK)/lib/libz.lib -mwindows -lws2_32
+
+
+##### STATIC LINKING
+GTKS=c:/ink/gtk2
+#Same thing, DOS style
+GTKSDOS=c:\ink\gtk2
+
+GTKSINC = \
+-I$(GTKS)/include \
+-I$(GTKS)/include/sigc++-1.2 \
+-I$(GTKS)/include/gtk-2.0 \
+-I$(GTKS)/include/atk-1.0 \
+-I$(GTKS)/include/pango-1.0 \
+-I$(GTKS)/include/glib-2.0 \
+-I$(GTKS)/include/freetype2  \
+-I$(GTKS)/include/libxml2 \
+-I$(GTKS)/include/libart-2.0
+
+
+GTKSLIB = \
+-mwindows -L$(GTKS)/lib -lsigc++-1.2.4 \
+-lgtk-2.0 -lpango-1.0 -lglib-2.0 -latk-1.0 \
+-lfreetype -lart_lgpl -ltiff -lpng -ljpeg -lz \
+-lxml2 -lintl -liconv -lws2_32
+
+
+#INC = -I. -I.. -I../.. $(GTKSINC)
+
+#LIBS = $(GTKSLIB) -mwindows -lws2_32 -limm32 -lole32
 
  
 #VARS = \
